# AI-Dojo

./: CMakeLists.txt  CMakeSettings.json  README.md
Advanced/: CMakeLists.txt  gan.h  main.cpp
Basics/: CMakeLists.txt  ffnet.cpp  ffnet.h  lin_reg.cpp  lin_reg.h  log_reg.cpp  log_reg.h  main.cpp  tensor_basics.cpp  tensor_basics.h
